@@ -333,6 +333,46 @@ load_gui_configuration() {
     return 0
 }
 
+strip_comments_outside_quotes() {
+    python3 - "$1" <<'PY'
+import sys
+
+line = sys.argv[1] if len(sys.argv) > 1 else ''
+result = []
+in_single = False
+in_double = False
+escaped = False
+
+for ch in line:
+    if escaped:
+        result.append(ch)
+        escaped = False
+        continue
+
+    if ch == '\\':
+        result.append(ch)
+        escaped = True
+        continue
+
+    if ch == '"' and not in_single:
+        in_double = not in_double
+        result.append(ch)
+        continue
+
+    if ch == "'" and not in_double:
+        in_single = not in_single
+        result.append(ch)
+        continue
+
+    if ch == '#' and not in_single and not in_double:
+        break
+
+    result.append(ch)
+
+print(''.join(result), end='')
+PY
+}
+
 parse_default_adc_configuration() {
     local template_file="$1"
     local -n _out_vref="$2"
@@ -358,7 +398,7 @@ parse_default_adc_configuration() {
     local pending_label=""
 
     while IFS= read -r line || [ -n "$line" ]; do
-        line="${line%%#*}"
+        line="$(strip_comments_outside_quotes "$line")"
         line="${line%$'\r'}"
         line="${line#${line%%[![:space:]]*}}"
         line="${line%${line##*[![:space:]]}}"
